[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beautiful-photo"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy",
    "pillow>=12.0.0",
    "scipy>=1.16.3",
    "mediapipe>=0.10.0",
]

[tool.setuptools.packages.find]
where = ["src"]
